--- a/index.html
+++ b/index.html
@@ -2645,45 +2645,45 @@ section {
     <div class="cert-grid" id="certGrid">
       <!-- Google BI Certification - Always visible -->
       <div class="cert-card card fade-in cert-visible">
-        <div class="cert-image"><img src="./certifications/thumbnail%20images/Coursera-%20Foundations%20of%20BI%20-%20Google-1.png" alt="Google Foundations of Business Intelligence" loading="lazy" /></div>
+        <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Coursera-%20Foundations%20of%20BI%20-%20Google-1.png" alt="Google Foundations of Business Intelligence" loading="lazy" /></div>
         <div class="cert-content">
           <h3 class="cert-title">Foundations of Business Intelligence</h3>
           <p class="cert-issuer">Google via Coursera</p>
           <p class="cert-date">2025</p>
-          <a href="./certifications/Coursera-%20Foundations%20of%20BI%20-%20Google.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+          <a href="./documents/certifications/Coursera-%20Foundations%20of%20BI%20-%20Google.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
         </div>
       </div>
 
       <!-- IBM AI Introduction - Always visible -->
       <div class="cert-card card fade-in cert-visible">
-        <div class="cert-image"><img src="./certifications/thumbnail%20images/IBM%20AI%20Foundations%20for%20Everyone%20Coursera%2081KHE539ONWB-1.png" alt="IBM AI Foundations for Everyone" loading="lazy" /></div>
+        <div class="cert-image"><img src="./images/certifications/thumbnail%20images/IBM%20AI%20Foundations%20for%20Everyone%20Coursera%2081KHE539ONWB-1.png" alt="IBM AI Foundations for Everyone" loading="lazy" /></div>
         <div class="cert-content">
           <h3 class="cert-title">AI Foundations for Everyone</h3>
           <p class="cert-issuer">IBM via Coursera</p>
           <p class="cert-date">2025</p>
-          <a href="./certifications/IBM%20AI%20Foundations%20for%20Everyone%20Coursera%2081KHE539ONWB.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+          <a href="./documents/certifications/IBM%20AI%20Foundations%20for%20Everyone%20Coursera%2081KHE539ONWB.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
         </div>
       </div>
 
       <!-- IBM Generative AI - Always visible -->
       <div class="cert-card card fade-in cert-visible">
-        <div class="cert-image"><img src="./certifications/thumbnail%20images/Coursera-%20GenAI-%20Intro%20%26%20Applications-%20IBM%20CHKHEVSPNRSS-1.png" alt="IBM Generative AI Introduction and Applications" loading="lazy" /></div>
+        <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Coursera-%20GenAI-%20Intro%20%26%20Applications-%20IBM%20CHKHEVSPNRSS-1.png" alt="IBM Generative AI Introduction and Applications" loading="lazy" /></div>
         <div class="cert-content">
           <h3 class="cert-title">Generative AI: Introduction and Applications</h3>
           <p class="cert-issuer">IBM via Coursera</p>
           <p class="cert-date">2025</p>
-          <a href="./certifications/Coursera-%20GenAI-%20Intro%20%26%20Applications-%20IBM%20CHKHEVSPNRSS.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+          <a href="./documents/certifications/Coursera-%20GenAI-%20Intro%20%26%20Applications-%20IBM%20CHKHEVSPNRSS.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
         </div>
       </div>
 
       <!-- Power BI Introduction - Hidden by default -->
       <div class="cert-card card fade-in cert-hidden">
-        <div class="cert-image"><img src="./certifications/thumbnail%20images/Coursera%20-%20Power%20BI%20Introduction%20LO2XHKFW1H52-1.png" alt="Power BI Introduction" loading="lazy" /></div>
+        <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Coursera%20-%20Power%20BI%20Introduction%20LO2XHKFW1H52-1.png" alt="Power BI Introduction" loading="lazy" /></div>
         <div class="cert-content">
           <h3 class="cert-title">Power BI Introduction</h3>
           <p class="cert-issuer">Coursera</p>
           <p class="cert-date">2024</p>
-          <a href="./certifications/Coursera%20-%20Power%20BI%20Introduction%20LO2XHKFW1H52.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+          <a href="./documents/certifications/Coursera%20-%20Power%20BI%20Introduction%20LO2XHKFW1H52.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
         </div>
       </div>
 
@@ -2694,40 +2694,40 @@ section {
           <h3 class="cert-title">AWS Proficiency Certificates</h3>
           <p class="cert-issuer">AWS</p>
           <p class="cert-date">2022</p>
-          <a href="./certifications/AWS_Proficiency_Certificates-1-6.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+          <a href="./documents/certifications/AWS_Proficiency_Certificates-1-6.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
         </div>
       </div>
 
       <!-- Clinical Trials & Monitoring - Hidden by default -->
       <div class="cert-card card fade-in cert-hidden">
-        <div class="cert-image"><img src="./certifications/thumbnail%20images/Proficiency-%20Clinical%20Trials%20%26%20Monitoring%20certifications-%20Sahil%20Walia-1.png" alt="Clinical Trials & Monitoring Proficiency" loading="lazy" /></div>
+        <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Proficiency-%20Clinical%20Trials%20%26%20Monitoring%20certifications-%20Sahil%20Walia-1.png" alt="Clinical Trials & Monitoring Proficiency" loading="lazy" /></div>
         <div class="cert-content">
           <h3 class="cert-title">Clinical Trials & Monitoring Proficiency</h3>
           <p class="cert-issuer">Professional Certification</p>
           <p class="cert-date">2022</p>
-          <a href="./certifications/Proficiency-%20Clinical%20Trials%20%26%20Monitoring%20certifications-%20Sahil%20Walia.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+          <a href="./documents/certifications/Proficiency-%20Clinical%20Trials%20%26%20Monitoring%20certifications-%20Sahil%20Walia.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
         </div>
       </div>
 
      <!-- Tableau Data Analyst - Hidden by default -->
       <div class="cert-card card fade-in cert-hidden">
-        <div class="cert-image"><img src="./certifications/thumbnail%20images/Tableau%20Certified%20Data%20Analyst%20certificate.png" alt="Tableau Certified Data Analyst" loading="lazy" /></div>
+        <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Tableau%20Certified%20Data%20Analyst%20certificate.png" alt="Tableau Certified Data Analyst" loading="lazy" /></div>
         <div class="cert-content">
           <h3 class="cert-title">Tableau Certified Data Analyst</h3>
           <p class="cert-issuer">Salesforce</p>
           <p class="cert-date">2023</p>
-         <a href="./certifications/Tableau%20Certified%20Data%20Analyst%20certificate.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+         <a href="./documents/certifications/Tableau%20Certified%20Data%20Analyst%20certificate.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
        </div>
       </div>
 
       <!-- Tableau Desktop Specialist - Hidden by default -->
       <div class="cert-card card fade-in cert-hidden">
-        <div class="cert-image"><img src="./certifications/thumbnail%20images/Tableau%20Desktop%20Specialist%20certificate.png" alt="Tableau Desktop Specialist" loading="lazy" /></div>
+        <div class="cert-image"><img src="./images/certifications/thumbnail%20images/Tableau%20Desktop%20Specialist%20certificate.png" alt="Tableau Desktop Specialist" loading="lazy" /></div>
         <div class="cert-content">
           <h3 class="cert-title">Tableau Desktop Specialist</h3>
           <p class="cert-issuer">Salesforce</p>
           <p class="cert-date">2022</p>
-         <a href="./certifications/Tableau%20Desktop%20Specialist%20certificate.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+         <a href="./documents/certifications/Tableau%20Desktop%20Specialist%20certificate.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
        </div>
       </div>
 
@@ -2754,42 +2754,43 @@ section {
     </div>
   </div>
 </section>
-    <!-- ================= Enhanced Beyond Work Section ================= -->
-    <section id="beyond" aria-label="Beyond Work">
-      <div class="container">
-        <div class="section-header fade-in">
-          <span class="section-label">Personal</span>
-          <h2 class="section-title">Beyond Work</h2>
-          <p class="section-subtitle">Interests and activities that inspire creativity and innovation</p>
+
+<!-- ================= Enhanced Beyond Work Section ================= -->
+<section id="beyond" aria-label="Beyond Work">
+  <div class="container">
+    <div class="section-header fade-in">
+      <span class="section-label">Personal</span>
+      <h2 class="section-title">Beyond Work</h2>
+      <p class="section-subtitle">Interests and activities that inspire creativity and innovation</p>
+    </div>
+
+    <div class="interests-grid">
+      <div class="interest-card card fade-in">
+        <div class="interest-image">
+          <img src="https://images.unsplash.com/photo-1518709268805-4e9042af2176?w=400&h=250&fit=crop" alt="Technology & Innovation" loading="lazy" />
         </div>
-
-        <div class="interests-grid">
-          <div class="interest-card card fade-in">
-            <div class="interest-image">
-              <img src="https://via.placeholder.com/400x250/7C3AED/ffffff?text=Tech+Innovation" alt="Technology & Innovation" loading="lazy" />
-            </div>
-            <h3 style="color:var(--accent-purple); margin-bottom:1rem">Technology & Innovation</h3>
-            <p style="color:var(--text-secondary); line-height:1.6">Passionate about emerging technologies, AI advancements, and exploring new data visualization techniques. Active in tech communities and open-source contributions, constantly learning about cutting-edge developments in machine learning and analytics.</p>
-          </div>
-
-          <div class="interest-card card fade-in">
-            <div class="interest-image">
-              <img src="https://via.placeholder.com/400x250/3B82F6/ffffff?text=Automotive+Engineering" alt="Automotive Engineering" loading="lazy" />
-            </div>
-            <h3 style="color:var(--accent-purple); margin-bottom:1rem">Automotive Engineering</h3>
-            <p style="color:var(--text-secondary); line-height:1.6">Lifelong enthusiasm for automotive technology and motorsports. Former team lead of collegiate motorsports team, combining engineering passion with analytical thinking. Fascinated by the intersection of data analytics and automotive performance optimization.</p>
-          </div>
-
-          <div class="interest-card card fade-in">
-            <div class="interest-image">
-              <img src="https://via.placeholder.com/400x250/A78BFA/ffffff?text=Community+Mentorship" alt="Community & Mentorship" loading="lazy" />
-            </div>
-            <h3 style="color:var(--accent-purple); margin-bottom:1rem">Community & Mentorship</h3>
-            <p style="color:var(--text-secondary); line-height:1.6">Dedicated to mentoring aspiring analysts and participating in data science communities. Contributing to educational initiatives in STEM fields, sharing knowledge through workshops, and helping others navigate their analytics career journey.</p>
-          </div>
-        </div>
+        <h3 style="color:var(--accent-purple); margin-bottom:1rem">Technology & Innovation</h3>
+        <p style="color:var(--text-secondary); line-height:1.6">Passionate about emerging technologies, AI advancements, and exploring new data visualization techniques. Active in tech communities and open-source contributions, constantly learning about cutting-edge developments in machine learning and analytics.</p>
       </div>
-    </section>
+
+      <div class="interest-card card fade-in">
+        <div class="interest-image">
+          <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=400&h=250&fit=crop" alt="Automotive Engineering" loading="lazy" />
+        </div>
+        <h3 style="color:var(--accent-purple); margin-bottom:1rem">Automotive Engineering</h3>
+        <p style="color:var(--text-secondary); line-height:1.6">Lifelong enthusiasm for automotive technology and motorsports. Former team lead of collegiate motorsports team, combining engineering passion with analytical thinking. Fascinated by the intersection of data analytics and automotive performance optimization.</p>
+      </div>
+
+      <div class="interest-card card fade-in">
+        <div class="interest-image">
+          <img src="https://images.unsplash.com/photo-1529390079861-591de354faf5?w=400&h=250&fit=crop" alt="Community & Mentorship" loading="lazy" />
+        </div>
+        <h3 style="color:var(--accent-purple); margin-bottom:1rem">Community & Mentorship</h3>
+        <p style="color:var(--text-secondary); line-height:1.6">Dedicated to mentoring aspiring analysts and participating in data science communities. Contributing to educational initiatives in STEM fields, sharing knowledge through workshops, and helping others navigate their analytics career journey.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- ================= Enhanced Contact Section ================= -->
 <section id="contact" aria-label="Contact Information">
