--- a/index.html
+++ b/index.html
@@ -2650,7 +2650,7 @@ section {
           <h3 class="cert-title">Foundations of Business Intelligence</h3>
           <p class="cert-issuer">Google via Coursera</p>
           <p class="cert-date">2025</p>
-          <a href="./documents/certifications/Coursera-%20Foundations%20of%20BI%20-%20Google.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+          <a href="./documents/certifications/Coursera- Foundations of BI - Google.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
         </div>
       </div>
 
@@ -2661,7 +2661,7 @@ section {
           <h3 class="cert-title">AI Foundations for Everyone</h3>
           <p class="cert-issuer">IBM via Coursera</p>
           <p class="cert-date">2025</p>
-          <a href="./documents/certifications/IBM%20AI%20Foundations%20for%20Everyone%20Coursera%2081KHE539ONWB.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+          <a href="./documents/certifications/IBM AI Foundations for Everyone Coursera 81KHE539ONWB.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
         </div>
       </div>
 
@@ -2672,7 +2672,7 @@ section {
           <h3 class="cert-title">Generative AI: Introduction and Applications</h3>
           <p class="cert-issuer">IBM via Coursera</p>
           <p class="cert-date">2025</p>
-          <a href="./documents/certifications/Coursera-%20GenAI-%20Intro%20%26%20Applications-%20IBM%20CHKHEVSPNRSS.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+          <a href="./documents/certifications/Coursera- GenAI- Intro & Applications- IBM CHKHEVSPNRSS.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
         </div>
       </div>
 
@@ -2683,7 +2683,7 @@ section {
           <h3 class="cert-title">Power BI Introduction</h3>
           <p class="cert-issuer">Coursera</p>
           <p class="cert-date">2024</p>
-          <a href="./documents/certifications/Coursera%20-%20Power%20BI%20Introduction%20LO2XHKFW1H52.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+          <a href="./documents/certifications/Coursera - Power BI Introduction LO2XHKFW1H52.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
         </div>
       </div>
 
@@ -2705,7 +2705,7 @@ section {
           <h3 class="cert-title">Clinical Trials & Monitoring Proficiency</h3>
           <p class="cert-issuer">Professional Certification</p>
           <p class="cert-date">2022</p>
-          <a href="./documents/certifications/Proficiency-%20Clinical%20Trials%20%26%20Monitoring%20certifications-%20Sahil%20Walia.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+          <a href="./documents/certifications/Proficiency- Clinical Trials & Monitoring certifications- Sahil Walia.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
         </div>
       </div>
 
@@ -2716,8 +2716,8 @@ section {
           <h3 class="cert-title">Tableau Certified Data Analyst</h3>
           <p class="cert-issuer">Salesforce</p>
           <p class="cert-date">2023</p>
-         <a href="./documents/certifications/Tableau%20Certified%20Data%20Analyst%20certificate.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
-       </div>
+          <a href="./documents/certifications/Tableau Certified Data Analyst certificate.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+        </div>
       </div>
 
       <!-- Tableau Desktop Specialist - Hidden by default -->
@@ -2727,8 +2727,8 @@ section {
           <h3 class="cert-title">Tableau Desktop Specialist</h3>
           <p class="cert-issuer">Salesforce</p>
           <p class="cert-date">2022</p>
-         <a href="./documents/certifications/Tableau%20Desktop%20Specialist%20certificate.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
-       </div>
+          <a href="./documents/certifications/Tableau Desktop Specialist certificate.pdf" target="_blank" rel="noopener" class="cert-link">View Certificate →</a>
+        </div>
       </div>
 
       <!-- Six Sigma Green Belt - Hidden by default -->
@@ -2754,7 +2754,6 @@ section {
     </div>
   </div>
 </section>
-
 <!-- ================= Enhanced Beyond Work Section ================= -->
 <section id="beyond" aria-label="Beyond Work">
   <div class="container">
